# spaspect

./: .firebaserc  .gitignore  Code Organization.md  GenPixCoordinates.py  README.md  Server.js  Technology Overview.md  demoEnvs.json  draft.html  drawPlots.js  genCoords.py  index.html  index.js  main.py  newOD.py  package-lock.json  package.js  package.json  utils.py  visualization_utils.py  waitPush.sh
CamPics/: LiveDL.py
core/: Aggregate.py  GenPixCoordinates.py  PixelMapper.py  RealTime.py  TrackedObject.py  consolidateSocialDistancing.py  core.py  getAverageDist.py  newCore.py  newUtils.py  runtimeVariables.json  sample_config.json  socialDistancingEvaluation.py  utils.py
core-cpp/: Makefile  PixelMapper.h  core.cpp  test.cpp  utils.h
core_cpp/: CMakeLists.txt  CVOutput.h  CVUtils.h  DashboardInfo.cpp  DashboardInfo.h  Makefile  PixelMapper.h  Track.cpp  Track.h  a.out  core.cpp  cppflowDemo.cpp  getTestCase.py  steps.sh  test.cpp  test2.cpp  utils.h
core_cpp/include/: CVOutput.h  CVUtils.h  DashboardInfo.h  PixelMapper.h  Track.h
core_cpp/src/: CVOutput.cpp  CVUtils.cpp  DashboardInfo.cpp  PixelMapper.cpp  Track.cpp
core_cpp/test/: CVUtilsTest.h  Main.cpp  Makefile  PixelMapperTest.h  RunTests.cpp  getTestCase.py
core_cpp/test/.libs/: a.out  lt-a.out  lt-simple  simple
core_cpp/test/include/: CVUtilsTest.h  DashboardInfoTest.h  ExampleTestCase.h  TrackTest.h
css/: styles.css
firebaseScripts/: copyLocal.js  pushFirebase.js  readWriteOne.js
visualization/: GreeceCam.json  Server.js  VeniceBeach.json  calibrationToDo.txt  contactus.html  index.js  (+16 more)
(+117 files in other folders)
